--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -13,6 +13,9 @@ tasks:
     - go build -ldflags="-s -w" -tags nowayland
     - task: lint
 
+  wasm:
+    - gogio -target js -ldflags="-s -w" -o wasm_assets github.com/steverusso/gio-icon-browser
+
   fmt:
     - goimports -w -l .
     - gofumpt -w -l .
