--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,5 @@
+name: ci
+
 on:
   push:
     branches: [ "master" ]
@@ -43,3 +45,9 @@ jobs:
 
     - name: Vet
       run: go vet -v ./...
+
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+    - name: staticcheck
+      run: staticcheck ./...
