--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,9 @@ jobs:
         go-version: 1.22.0
 
     - name: Install Gio Dependencies
-      run: sudo apt install gcc pkg-config libwayland-dev libx11-dev libx11-xcb-dev libxkbcommon-x11-dev libgles2-mesa-dev libegl1-mesa-dev libffi-dev libxcursor-dev libvulkan-dev
+      run: |
+        sudo apt update
+        sudo apt install gcc pkg-config libwayland-dev libx11-dev libx11-xcb-dev libxkbcommon-x11-dev libgles2-mesa-dev libegl1-mesa-dev libffi-dev libxcursor-dev libvulkan-dev
 
     - run: go install golang.org/x/tools/cmd/goimports@latest
     - run: go install honnef.co/go/tools/cmd/staticcheck@latest
