--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,47 +7,36 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Setup Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.21.0
+        go-version: 1.22.0
 
     - name: Install Gio Dependencies
-      run: sudo apt install gcc pkg-config libwayland-dev libx11-dev libx11-xcb-dev libxkbcommon-x11-dev libgles2-mesa-dev libegl1-mesa-dev libffi-dev libxcursor-dev libvulkan-dev
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Install goimports
-      run: go install golang.org/x/tools/cmd/goimports@latest
-
-    - name: Install gofumpt
-      run: go install mvdan.cc/gofumpt@latest
-
-    - name: Format
-      run: goimports -w . && gofumpt -w .
-
-    - name: Verify
       run: |
+        sudo apt update
+        sudo apt install gcc pkg-config libwayland-dev libx11-dev libx11-xcb-dev libxkbcommon-x11-dev libgles2-mesa-dev libegl1-mesa-dev libffi-dev libxcursor-dev libvulkan-dev
+
+    - run: go install golang.org/x/tools/cmd/goimports@latest
+    - run: go install honnef.co/go/tools/cmd/staticcheck@latest
+    - run: go install mvdan.cc/gofumpt@latest
+
+    - name: Format and check
+      run: |
+        goimports -w .
+        gofumpt -w .
         if [ -n "$(git diff)" ]; then
           git diff
           exit 1
         fi
 
-    - name: Test
-      run: go test -v ./...
-
-    - name: Vet
-      run: go vet -v ./...
-
-    - name: Install staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
-    - name: staticcheck
-      run: staticcheck ./...
+    - run: go build -v ./...
+    - run: go test -v ./...
+    - run: go vet -v ./...
+    - run: staticcheck ./...
